revert to turquoise

--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -3,8 +3,8 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    //background-image: linear-gradient(to right, $green 0%, $teal 100%);
-    background: $footerGrey;
+    background-image: linear-gradient(to right, $green 0%, $teal 100%);
+    //background: $footerGrey;
     z-index: 1040;
 
     .compare-hospitals-header {
@@ -54,7 +54,7 @@
 
 
         .compare-button-title {
-            background-color: #535353;
+            //background-color: #535353;
             cursor: pointer;
 
             svg { // #compare_heart
