--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -191,7 +191,8 @@
     }
 
     .result-item-parent {
-        background-color: $footerGrey;
+        //background-color: $footerGrey;
+        background-color: $turq;
     }
 
     .result-item-header,
