--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -77,7 +77,7 @@
     }
 
     //colours
-    &.btn-teal {
+    &.btn-turq {
         @include linear-gradient(90deg, $turq, $turq, $green);
 
         &.btn-grad {
@@ -145,7 +145,7 @@
         //height: 32px;
         //width: 32px;
         //border-radius: 23px;
-        box-shadow: inset 0px 0px 0px 2px $teal;
+        box-shadow: inset 0px 0px 0px 2px $turq;
         color: $turq;
         //flex: 0 0 32px;
         padding: 8px 15px 8px 40px;
