--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -3,7 +3,8 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    background-image: linear-gradient(to right, $green 0%, $teal 100%);
+    //background-image: linear-gradient(to right, $green 0%, $teal 100%);
+    background-color: $turq;
     //background: $footerGrey;
     z-index: 1040;
 
