Remove remaining font awesome icons.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,7 +22,7 @@
 @import '~cookieconsent/build/cookieconsent.min.css';
 
 // Font-awesome
-@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+//@import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
 
 //MISC
