How to Use page first draft build.

--- a/resources/sass/_typography.scss
+++ b/resources/sass/_typography.scss
@@ -132,6 +132,10 @@
     @include font-size(28, true);
 }
 
+.font-32 {
+    @include font-size(32, true);
+}
+
 .font-36 {
     @include font-size(36, true);
 }
