--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -176,7 +176,7 @@ select.big {
 }
 
 .bg-greylight {
-    background-color: $greylight;
+    background-color: $greylightbg;
 }
 
 .bg-blue-grad {
@@ -205,7 +205,7 @@ select.big {
     background-color: $turq;
 }
 
-.col-teal {
+.col-turq {
     color: $turq;
 }
 
