--- a/resources/sass/pages/_content.scss
+++ b/resources/sass/pages/_content.scss
@@ -27,7 +27,7 @@
 
         > li {
             @include font-style(false, 20px, false, false, 24px, -1px);
-            margin: 0 0 22px 0;
+            margin: 0 0 22px 40px;
             position: relative;
             padding: 0 0 0 40px;
 
