Dr S tour modal

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -58,6 +58,7 @@
 @import 'components/form';
 @import 'components/accordion';
 @import 'components/doctor';
+@import 'components/modal';
 
 // BASIC COMPONENTS
 @import 'components/banner';
@@ -70,7 +71,6 @@
 //@import 'components/basic/range';
 @import 'components/basic/bsSlider';
 @import 'components/basic/popover';
-@import 'components/basic/modal';
 @import 'components/basic/specialOfferSlide';
 
 
