--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -686,6 +686,9 @@
     position: relative;
 
     svg {
+        width: 7px;
+        height: 11px;
+
         path {
             fill: $body-color;
         }
