--- a/resources/sass/pages/_faqsPage.scss
+++ b/resources/sass/pages/_faqsPage.scss
@@ -10,14 +10,11 @@
         }
     }
 
-    input.faq-search-input {
+    input#faq_search_input {
         border: 3px solid $turq !important;
-        height: 62px;
-        //line-height: 80px;
         border-radius: 40px !important;
-        padding-left: 90px;
-        padding-right: 45px;
-        @include font-style(false, 32px, #000, false, false, -1.6px);
+        padding: 12px 45px 12px 80px;
+        @include font-size(25);
 
         @include placeholder {
             @include font-style(false, false, #000, false, false, -1.6px);
