--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -23,21 +23,22 @@
     //padding-bottom: 60px;
 
     .nav-tabs {
-        //box-shadow: inset 0px -2px 0px 0px rgba(236, 236, 236, 1);
-        border-top: 2px solid #ececec;
-        border-bottom: 2px solid #ececec;
+        box-shadow: inset 0px -2px 0px 0px rgba(236, 236, 236, 1), inset 0px 2px 0px 0px rgba(236,236,236,1);
+
         li { // nav-item
             margin-right: 25px;
             box-sizing: content-box;
-            padding-top: 5px;
 
             a { // nav-link
                 color: $caretBlack;
                 @include font-size(18);
                 @extend .SofiaPro-Medium;
+                @extend .py-2;
+                background-color: transparent;
 
                 &.active {
                     border-bottom: 2px solid $turq;
+                    background-color: transparent;
                 }
             }
         }
