--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -187,3 +187,6 @@ $carousel-control-icon-width: 24px;
 $carousel-control-icon-height: 24px;
 $carousel-control-opacity: 1;
 $carousel-control-width: auto;
+
+// Pagination
+$pagination-link-height: 35px;
