--- a/resources/sass/components/_pagination.scss
+++ b/resources/sass/components/_pagination.scss
@@ -30,6 +30,7 @@
             .page-link {
                 width: 16px;
                 border: none;
+                box-shadow: none;
                 background: transparent;
                 transform: translateY(10px);
             }
@@ -39,12 +40,14 @@
             display: inline-block;
             padding: 0;
             margin: 0 3px;
-            width: 36px;
-            height: 36px;
+            width: $pagination-link-height;
+            height: $pagination-link-height;
+            line-height: $pagination-link-height;
             background-color: $white;
-            border: 2px solid $turq;
+            box-shadow: inset 0 0 0 2px $turq;
+            border: none;
+            //border: 2px solid $turq;
             text-align: center;
-            line-height: 32px;
             color: $turq;
             font-size: 20px;
             border-radius: 10px;
@@ -57,6 +60,7 @@
                 background-color: $turq;
                 color: $white;
                 cursor: default;
+                box-shadow: none;
             }
         }
 
