--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -492,12 +492,13 @@
         width: 92px;
         height: 23px;
         line-height: 23px;
-        border-radius: 4px 3px 0 0;
+        border-radius: 3px 3px 0 0;
         transition: 0.3s all ease;
 
-        &:before {
-            content: 'More info' !important;
-        }
+        //&:before {
+        //    content: 'More info' !important;
+        //    @include v-c;
+        //}
 
         svg {
             transition: 0.1s all ease;
@@ -508,9 +509,9 @@
             background: linear-gradient(90deg, #000, #000, #00bcb4, #000);
             background-size: 300% 100%;
 
-            &:before {
-                content: 'Close info' !important;
-            }
+            //&:before {
+            //    content: 'Close info' !important;
+            //}
 
             //&:after {
             //    content: 'Close info';
