--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -141,6 +141,10 @@
         }
     }
 
+    &.btn-squared {
+        border-radius: 10px !important;
+    }
+
     &.btn-compare {
         //height: 32px;
         //width: 32px;
