Adding tooltips to comparison bar.

--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -95,6 +95,7 @@
 
     &.btn-blue {
         @include linear-gradient(90deg, $blue, $blue, $turq);
+        background-size: 200%;
 
         &.btn-grad {
             @include linear-gradient(90deg, $blue, $blue, $turq, $blue);
