--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -123,6 +123,7 @@
             background-repeat: no-repeat;
             background-position: center;
             transition: $transition;
+            transition: $transition;
 
             &.rotated {
                 transform: rotate(180deg);
@@ -131,6 +132,10 @@
     }
 
     .compare-hospitals-content {
+        .row {
+            @include reset-row-spacing(0);
+        }
+
         background-color: #fff;
         display: none;
         height: calc(100vh - 190px);
@@ -189,15 +194,20 @@
         }
 
         .col-inner {
-            padding-top: 30px;
+            padding-top: 20px;
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
+            //justify-content: flex-end;
 
             .cell {
                 height: 40px;
                 line-height: 40px;
-                overflow: hidden;
+                //overflow: hidden;
+
+                .help-link {
+                    @include v-c;
+                    right: -15px;
+                }
             }
         }
     }
