--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -175,6 +175,7 @@ $nav-tabs-link-hover-border-color: $turq;
 
 // Borders
 $border-radius: 9px;
+$greyBorder: 1px solid $borderGrey;
 
 // Misc
 $hospital-image-width: 150px;
