Comparison area completed.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -65,7 +65,8 @@ $cqcRed: #BF1000;
 
 // Borders
 $borderVideo: $darkestGrey;
-$borderGrey: #d7d7d7;
+//$borderGrey: #d7d7d7;
+$borderGrey: #ededed;
 
 // Body
 $body-bg: #fff;
