Arrows in solution bar tabs

--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -328,8 +328,8 @@
             }
         }
 
-        svg,
-        span {
+        > svg,
+        > span {
             position: absolute;
             @include v-c;
             right: 20px;
