Made start on new about us page

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -7,7 +7,7 @@ body, * {
 .terms-and-conditions-page,
 .faqs-page,
 //.your-rights-page,
-.about-us-page,
+//.about-us-page,
 .blog-page {
     main {
         padding-top: 40px;
