--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -192,3 +192,8 @@ $carousel-control-width: auto;
 
 // Pagination
 $pagination-link-height: 35px;
+
+// Tables
+//$table-cell-padding: 0.5rem;
+//$table-cell-padding-small: 0.5rem;
+//$table-border-width: 0;
