--- a/resources/sass/pages/_content.scss
+++ b/resources/sass/pages/_content.scss
@@ -5,7 +5,11 @@
     }
 
     p {
-        @include font-style(false, 20px, false, false, 24px, -1px);
+        @include font-size(20);
+
+        //&:last-child {
+        //    @extend .mb-0;
+        //}
     }
 
     table {
@@ -31,7 +35,7 @@
         margin: 30px 0 50px 0;
 
         > li {
-            @include font-style(false, 20px, false, false, 24px, -1px);
+            @include font-size(22);
             margin: 0 0 22px 40px;
             position: relative;
             padding: 0 0 0 40px;
@@ -177,4 +181,10 @@ h6 {
 
 p {
     @include font-style(false, 14px, false, false, 16.8px, -1px);
+}
+
+.image-wrapper {
+    img {
+        width: 100%;
+    }
 }
