Cleanup of compare JS and SCSS

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -621,4 +621,8 @@
         opacity: $modal-backdrop-opacity;
         pointer-events: initial;
     }
+
+    .compare-arrow {
+        transform: rotate3d(0, 0, 1, 180deg);
+    }
 }
