--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -153,27 +153,27 @@
      * @param {string} $lh
      * @param {string} $ls
 */
-@mixin font-style($family: 'SofiaPro-Regular', $size: false, $colour: $body-color, $weight: 400,  $lh: false, $ls: false) {
-    @if $family {
-        font-family: $family, Helvetica, Arial, sans-serif;
-    }
-    @if $size {
-        @include font-size($size);
-    }
-    @if $colour {
-        color: $colour;
-    }
-    @if $weight {
-        font-weight: $weight;
-    }
-    //@if $lh {
-    //    line-height: calc(#{strip-unit($lh)} / #{strip-unit($size)});
-    //}
-    line-height: $line-height-base;
-    letter-spacing: $letter-spacing;
-    //@if $ls {
-    //}
-}
+//@mixin font-style($family: 'SofiaPro-Regular', $size: false, $colour: $body-color, $weight: 400,  $lh: false, $ls: false) {
+//    @if $family {
+//        font-family: $family, Helvetica, Arial, sans-serif;
+//    }
+//    @if $size {
+//        @include font-size($size);
+//    }
+//    @if $colour {
+//        color: $colour;
+//    }
+//    @if $weight {
+//        font-weight: $weight;
+//    }
+//    //@if $lh {
+//    //    line-height: calc(#{strip-unit($lh)} / #{strip-unit($size)});
+//    //}
+//    line-height: $line-height-base;
+//    letter-spacing: $letter-spacing;
+//    //@if $ls {
+//    //}
+//}
 
 
 //Header section
