--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -137,6 +137,7 @@
 
             > li {
                 //@include font-style(false, 20px, false, false, 24px, -1px);
+                @include font-size(20);
                 margin: 0 0 22px 0;
                 position: relative;
                 padding: 0 0 0 40px;
