--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -25,7 +25,7 @@
             //color: #1b1b1b;
             p {
                 //font-style($family: 'SofiaPro-Regular', $size: false, $colour: $body-color, $weight: 400,  $lh: false, $ls: false);
-                @include font-style(false, 20px, false, false, 24px, -1px);
+                @include font-size(20);
             }
         }
 
