--- a/resources/sass/pages/pagesections/_howSection.scss
+++ b/resources/sass/pages/pagesections/_howSection.scss
@@ -9,13 +9,16 @@
     }
 
     .icon-title {
-        @include font-style('SofiaPro-Medium', 22px, false, #000, 26px, -0.9px);
+        //@include font-style('SofiaPro-Medium', 22px, false, #000, 26px, -0.9px);
+        @include font-size(22);
+        @extend .SofiaPro-Medium;
         margin-bottom: 25px;
     }
 
     .icon-description {
         li, p {
-            @include font-style(false, 20px, false, false, 24px, -1px);
+            //@include font-style(false, 20px, false, false, 24px, -1px);
+            @include font-size(20);
         }
     }
 }
