--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -5,6 +5,7 @@ $transition: 0.3s all ease;
 $headings-font-family: 'SofiaPro-Bold', sans-serif;
 $font-family-sans-serif: 'SofiaPro-Regular', sans-serif;
 $headings-font-weight: normal; // font is bold, so normal is standard bold
+$font-size-base: 14;
 //$font-size-base: 0.9rem;
 
 // Line-height
