--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -5,7 +5,7 @@
 .btn {
     @include font-size(14);
     @include transition(0.3s);
-    //@extend .SofiaPro-Medium;
+    letter-spacing: $letter-spacing;
     border-radius: 100px;
     color: $white;
     padding: 14px 26px;
@@ -136,6 +136,15 @@
 
     &.btn-grey {
         @include linear-gradient(90deg, $footerGrey, $footerGrey, $pink);
+        //@include linear-gradient(90deg, $pink, $pink, $violet);
+        &.btn-grad {
+            @include linear-gradient(90deg, $footerGrey, $footerGrey, $pink, $footerGrey);
+        }
+    }
+
+    &.btn-lightgrey {
+        color: $body-color;
+        @include linear-gradient(90deg, $lighterGrey, $lighterGrey, $lighterGrey);
         //@include linear-gradient(90deg, $pink, $pink, $violet);
         &.btn-grad {
             @include linear-gradient(90deg, $footerGrey, $footerGrey, $pink, $footerGrey);
