--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -186,16 +186,29 @@
     }
 
     .sort-parent {
-        background-color: $lighterGrey;
+        background-color: #fff;
     }
 
     .sort-bar {
         @include media-breakpoint-up(lg) {
-            height: 60px;
+            //height: 60px;
         }
+
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+        .section-1 {
+            width: 33%;
+        }
+
+        .section-2 {
+            width: 53%;
+        }
+
+        .section-3 {
+            width: 14%;
+        }
 
         .show-section {
             margin: auto auto auto 0;
@@ -227,8 +240,7 @@
     }
 
     .result-item-parent {
-        //background-color: $footerGrey;
-        background-color: $turq;
+        background-color: #fff;
     }
 
     .result-item-header,
@@ -353,10 +365,6 @@
             @include flex-center;
             justify-content: flex-start;
             flex-direction: column;
-            color: #ffffff;
-            font-size: 14px;
-            font-weight: 500;
-            line-height: 16.8px;
             text-align: center;
             flex: 1;
 
@@ -368,7 +376,7 @@
                 @include icon-bg-center(15%);
                 width: 100%;
                 height: 20px;
-                background-image: url('../images/icons/caret-down-white.svg');
+                background-image: url('../images/icons/chevron-down.svg');
                 cursor: pointer;
             }
 
