--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -50,6 +50,18 @@
 
     // Hide filters on pageload
     #resultspage_form {
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+
+        &.js-is-sticky,
+        &.js-is-sticky--change,
+        &.js-is-stuck {
+            z-index: 1075;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+        }
+
         .filter-parent {
             //display: none;
 
@@ -204,6 +216,7 @@
 
         .section-2 {
             width: 53%;
+            transition: $transition;
         }
 
         .section-3 {
@@ -288,15 +301,13 @@
     }
 
     .result-item {
+        margin-top: 7px;
         &:not(:first-child) {
-            margin-top: 7px;
         }
-
-        background-color: $white;
     }
 
-
     .result-item-inner {
+        background-color: #fff;
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
@@ -340,7 +351,7 @@
             .result-item-section-3 {
                 //flex: 1 0 14%;
                 width: 14%;
-                padding: 10px 0 10px 10px;
+                padding: 10px;
                 @include pseudo-border($borderGrey);
 
                 .btn-area-lower {
@@ -459,10 +470,9 @@
     .nhs-hospital,
     .private-hospital {
         position: absolute;
-        top: 0;
-        //width: 60px;
-        //height: 60px;
-        //transform: rotate(180deg);
+        bottom: 0;
+        left: 0;
+        width: 100%;
     }
 
     .nhs-hospital {
@@ -537,18 +547,6 @@
     //padding-top: 85.6px;
 }
 
-#result_item_parent {
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-
-    &.js-is-sticky,
-    &.js-is-sticky--change,
-    &.js-is-stuck {
-        z-index: 1075;
-    }
-}
 
 .compare {
     &.disabled {
@@ -632,5 +630,13 @@
 
     .compare-arrow {
         transform: rotate3d(0, 0, 1, 180deg);
+    }
+}
+
+// Body class when filters are open
+.filters-open {
+    .section-2 {
+        opacity: 0;
+        pointer-events: none;
     }
 }
