Click for prices back in

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -265,6 +265,9 @@ select.big {
     cursor: pointer;
     color: inherit;
     transition: $transition;
+    appearance: none;
+    background-color: transparent;
+    border: none;
     //text-decoration: underline !important;
 
     &:hover {
