Focus into results page form when tabbing off 'show filters button'

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -17,7 +17,7 @@ body, * {
 // remove focus ring
 * {
     &:focus {
-        outline: none !important;
+        //outline: none !important;
     }
 }
 
