--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -19,15 +19,15 @@
         left: 0;
         bottom: 0;
         right: 0;
-        background-color: $bannerMaskGreen;
-        opacity: 0.85;
+        background-color: #fff;
+        opacity: 0.9;
     }
 }
 
 //BANNER CONTENTS
 
 .box {
-    border-radius: 20px;
+    border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.75);
     padding: 20px 30px;
     text-align: center;
